--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -81,24 +81,17 @@ py manage.py createsuperuser --username admin --email admin@yahoo.com --pass
 [user auth](https://www.django-rest-framework.org/api-guide/authentication/)
 - [advanced] oauth and openid connect SSO
 
-
+---
+### easily deploy to liara
+```
+liara deploy
+```
+- project name: noteflow.liara.run
+- liara config file
+---
+### CORS
+- https://pypi.org/project/django-cors-headers/
           </textarea>
-        </section>
-
-        <section data-markdown>
-          <textarea data-template>
-             - easily deploy to liara
-              ```
-              liara deploy
-              ```
-              - project name: noteflow.liara.run
-              - liara config file
-          </textarea>
-        </section>
-
-        <section>
-            <h3>CORS</h3>
-            <a href="https://pypi.org/project/django-cors-headers/">cors package</a>
         </section>
     </div>
 </div>
