--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -70,10 +70,19 @@ py manage.py createsuperuser --username admin --email admin@yahoo.com --pass
 - create env for each merge request
 - deploy to liara with sqlite database x
 - mssql database
-- timezone
-- log file
 - change debug
 - use master code
+
+---
+### timezone
+- change timezone in settings.py
+- django is timezone free in database(link)
+- liara has Tehran timezone by default
+
+---
+### log file
+- there is no log file in django!
+
 ---
 ### soft delete
 ---
