--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -117,12 +117,15 @@ liara deploy
     - docker compose up
 
 ---
+### Github CI CD
+- use github CI CD file Sample
+
+---
 ToDo:
 - upload media
 - have multiple env environment
 - change debug
 - write test
-- use github ci cd
 - create env for each merge request
 - use master code
   </textarea>
