--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -121,10 +121,11 @@ liara deploy
 - use github CI CD file Sample
 
 ---
+### Env File in Django
+- change Debug in settings
+---
 ToDo:
 - upload media
-- have multiple env environment
-- change debug
 - write test
 - create env for each merge request
 - use master code
