--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -124,11 +124,13 @@ liara deploy
 ### Env File in Django
 - change Debug in settings
 ---
+### Master Code
+- be careful for security
+---
 ToDo:
 - upload media
 - write test
 - create env for each merge request
-- use master code
   </textarea>
 </section>
     </div>
