--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -38,7 +38,7 @@
 
 <section data-markdown="">
   <textarea data-template>
-- pagination x
+### pagination x
 ---
 ### Filter
 - [django filter package](https://pypi.org/project/django-filter/)
@@ -127,9 +127,15 @@ liara deploy
 ### Master Code
 - be careful for security
 ---
+### Write Test For API
+
+---
+### upload Media
+- use media folder path in `settings.py`
+
+---
 ToDo:
 - upload media
-- write test
 - create env for each merge request
   </textarea>
 </section>
