--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -38,6 +38,12 @@
 
 <section data-markdown="">
 <textarea data-template>
+    ### Project Description
+    - Create Note App
+    - User can authenticate
+    - Can create public and private note
+    - Write Dockerfile
+    ---
     ### Create App
     ```
     python manage.py startapp
@@ -81,8 +87,8 @@
     ```
     - add notes to admin model
     - add `__str__` to model
-    ---
 
+    ---
     ### Generate Data With Command
     - we have sth in Laravel like factory, seeder
     - in django use command with folder /app/management/commands/command_name.py
@@ -162,7 +168,10 @@
         - authentication/authorization
     ---
     ToDo:
+    - cache
+    - websocket
     - create env for each merge request
+    - clean code
 </textarea>
 </section>
     </div>
