--- a/django-mini-project1.html
+++ b/django-mini-project1.html
@@ -69,6 +69,25 @@
     ---
     ### Pagination
     ---
+    ### Pagination(Cont.)
+    in APIView ([source](https://stackoverflow.com/questions/50869116/how-to-do-pagination-in-django-rest-api-in-apiview))
+    ```python
+    from rest_framework.pagination import PageNumberPagination
+    paginator = PageNumberPagination()
+    result_page = paginator.paginate_queryset(final_Score, request)
+    serializer = TalentScoringSerializer(result_page, many=True)
+    return paginator.get_paginated_response(serializer.data)
+    ```
+    ---
+    ### Pagination(Cont.)
+    in mixin, generics, viewset ([source](https://www.django-rest-framework.org/api-guide/pagination/))
+    ```python
+    class BillingRecordsView(generics.ListAPIView):
+        queryset = Billing.objects.all()
+        serializer_class = BillingRecordsSerializer
+        pagination_class = PageNumberPagination
+    ```
+    ---
     ### Filter
     - [django filter package](https://pypi.org/project/django-filter/)
     ---
@@ -170,6 +189,8 @@
     ToDo:
     - cache
     - websocket
+    - cronjob
+    - celery
     - create env for each merge request
     - clean code
 </textarea>
