--- a/laravel-inertia-getting-started.html
+++ b/laravel-inertia-getting-started.html
@@ -70,6 +70,10 @@
             <h1>Done!</h1>
             <p>see http://localhost:8000</p>
         </section>
+        <section>
+            <div>some parts from <a href="https://www.youtube.com/watch?v=VrQRa-afCAk&t=336s">this source</a></div>
+
+        </section>
     </div>
 </div>
 
